bugfix: saturn's rings no longer shift to the side on smaller screen sizes

--- a/src/components/Planet/Planet.css
+++ b/src/components/Planet/Planet.css
@@ -108,14 +108,14 @@
   height: 55vh;
   width: 55vh;
   content: "";
-  top: calc(47vh * -.2);
-  left: calc(47vh * -.2);
+  top: 50%;
+  left: 50%;
   border: 50px solid silver;
   outline: 50px solid silver;
   outline-offset: 5px;
   border-radius: 50%;
   position: absolute;
-  transform: rotate3d(1, 0, 0, 70deg);
+  transform: translate(-50%, -50%) rotate3d(1, 0, 0, 70deg);
   z-index: 0;
   opacity: .8;
 }
